2008-10-07: mayoro
adding new field to display template_path_list of  documented business templates

2008-09-27: mayoro
- adding ERP5 Forms and python scripts for documenting skin_folder correctly
- removing ERP5 Report Form for previous documentation of skin folder
- removing title wich was just the name of the action on worklist workflow because description is enought
- displaying whole python scripts, z sql methods and page templates in ODT mode
- disable all empty listbox in html and odt mode


2008-09-20: mayoro
- Adding forms for the new  class of documentation BaseCategoryDocumentationHelper
- Updating links concerning base categories

2008-09-13: mayoro
- Adding Appendix on ODT mode to sumurise repetitif class_methods and property_sheets in documentation


2008-07-05: mayoro
- removing  erp5_documentation_odt_style
- removing ListBox_asAccessorHTML in erp5_documentation_xhtml_style

2008-06-30: mayoro
- removing ListBox_asAccessorHTML in erp5_documentation_odt_style


2008-06-29: mayoro
adding  context_box_render in erp5_documentation_xhtml_style with customization to make documentation accessible in developper mode

2008-06-21: mayoro
removing tabulations in ListBox_asAccessorHTML due to previous commit

2008-06-21: mayoro
removing emty line in accessor methods lixbox rendered

2008-05-17: mayoro
Initial version of erp5_documentation