@@ -3,7 +3,7 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <global name="ERP5Report" module="Products.ERP5Form.Report"/>
+        <global name="ERP5Form" module="Products.ERP5Form.Form"/>
         <tuple/>
       </tuple>
     </pickle>
@@ -62,7 +62,7 @@
             <key> <string>group_list</string> </key>
             <value>
               <list>
-                <string>white_background</string>
+                <string>left</string>
                 <string>right</string>
                 <string>center</string>
                 <string>bottom</string>
@@ -89,7 +89,17 @@
                 <item>
                     <key> <string>hidden</string> </key>
                     <value>
-                      <list/>
+                      <list>
+                        <string>your_reportbox</string>
+                      </list>
+                    </value>
+                </item>
+                <item>
+                    <key> <string>left</string> </key>
+                    <value>
+                      <list>
+                        <string>explanation</string>
+                      </list>
                     </value>
                 </item>
                 <item>
@@ -126,10 +136,6 @@
             <value> <string>report_view</string> </value>
         </item>
         <item>
-            <key> <string>report_method</string> </key>
-            <value> <string>PDFDocument_getReportSectionList</string> </value>
-        </item>
-        <item>
             <key> <string>row_length</string> </key>
             <value> <int>4</int> </value>
         </item>
@@ -147,6 +153,10 @@
         </item>
         <item>
             <key> <string>update_action</string> </key>
+            <value> <string></string> </value>
+        </item>
+        <item>
+            <key> <string>update_action_title</string> </key>
             <value> <string></string> </value>
         </item>
       </dictionary>
